# claudetui

./: BUGS_AND_ITERATIONS.md  Cargo.toml  README.md
src/: app.rs  config.rs  main.rs
src/git/: diff.rs  mod.rs  watcher.rs
src/pty/: session.rs
src/ui/: command_palette.rs  diff_pane.rs  input_overlay.rs  mod.rs  sidebar.rs  status_bar.rs  terminal_pane.rs  toast.rs
