[package]
name = "claudetui"
version = "0.1.0"
edition = "2021"
description = "Terminal wrapper for Claude Code with multi-session support"

[dependencies]
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
portable-pty = "0.9"
vt100 = "0.15"
git2 = "0.20"
notify = "8"
nucleo-matcher = "0.3"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
dirs = "6"
